<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2016 The CyanogenMod Project
               (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title and summary -->
    <string name="moto_actions_title">Moto Actions</string>

    <!-- Device gestures -->
    <string name="device_gestures_title">Device gestures</string>
    <string name="device_gestures_summary">Manage device gestures</string>

    <!-- Ambient display gestures -->
    <string name="ambient_display_manage_summary">Manage ambient display gestures</string>

    <!-- Fingerprint gestures -->
    <string name="fingerprint_gestures_title">Fingerprint gestures</string>
    <string name="fingerprint_gestures_summary">Use fingerprint gestures</string>
    <string name="fingerprint_gestures_manage_summary">Manage fingerprint gestures</string>
    <string name="fingerprint_actions_screenon">Actions with screen on</string>
    <string name="fingerprint_tap_title">Single tap</string>
    <string name="fingerprint_tap_dlg_title">Select action for single tap</string>
    <string name="fingerprint_double_tap_title">Double tap</string>
    <string name="fingerprint_double_tap_dlg_title">Select action for double tap</string>
    <string name="fingerprint_long_tap_title">Long tap</string>
    <string name="fingerprint_long_tap_dlg_title">Select action for long tap</string>
    <string name="fingerprint_swipe_left_title">Swipe left</string>
    <string name="fingerprint_swipe_left_dlg_title">Select action for swipe left</string>
    <string name="fingerprint_swipe_right_title">Swipe right</string>
    <string name="fingerprint_swipe_right_dlg_title">Select action for swipe right</string>

    <!-- Fingerprint gestures screen off -->
    <string name="fingerprint_gestures_screenoff_title">Fingerprint gestures when screen off</string>
    <string name="fingerprint_gestures_screenoff_summary">Use fingerprint gestures when screen off.\n\nFingerprint unlocking must be disabled to use this feature.</string>
    <string name="fingerprint_actions_screenoff">Actions with screen off</string>

    <!-- Actions -->
    <string name="action_none">None</string>
    <string name="action_home">Home</string>
    <string name="action_power">Screen on/off</string>
    <string name="action_wake">Wake</string>
    <string name="action_back">Back</string>
    <string name="action_recents">Recents</string>
    <string name="action_last_app">Last app</string>
    <string name="action_volume_up">Volume up</string>
    <string name="action_volume_down">Volume down</string>
    <string name="action_voice_assistant">Voice assistant</string>
    <string name="action_play_pause">Play/pause</string>
    <string name="action_previous_track">Previous track</string>
    <string name="action_next_track">Next track</string>
    <string name="action_flashlight">Flashlight on/off</string>
    <string name="action_camera">Open camera</string>
    <string name="action_screenshot">Take screenshot</string>
    <string name="action_browser">Open browser</string>
    <string name="action_dialer">Open dialer</string>
    <string name="action_email">Open email app</string>
    <string name="action_messages">Open messages app</string>
    <string name="action_pip">Picture-in-Picture mode</string>

    <!-- Screen off gestures -->
    <string name="screen_off_gestures_title">Screen off gestures</string>
    <string name="screen_off_gestures_manage_summary">Manage gestures when screen is off</string>
    <string name="screen_off_gestures_swipe_left_title">Swipe left</string>
    <string name="screen_off_gestures_swipe_left_dlg_title">Select action for swipe left</string>
    <string name="screen_off_gestures_swipe_right_title">Swipe right</string>
    <string name="screen_off_gestures_swipe_right_dlg_title">Select action for swipe right</string>
    <string name="screen_off_gestures_swipe_up_title">Swipe up</string>
    <string name="screen_off_gestures_swipe_up_dlg_title">Select action for swipe up</string>
    <string name="screen_off_gestures_swipe_down_title">Swipe down</string>
    <string name="screen_off_gestures_swipe_down_dlg_title">Select action for swipe down</string>

   <!-- Double tap to wake -->
   <string name="tap_to_wake">Tap to wake</string>
   <string name="tap_to_wake_summary">Pulse notifications on tap</string>

   <!-- Screen off gestures haptic feedback -->
   <string name="haptic_feedback">Haptic feedback</string>
   <string name="haptic_feedback_summary">Vibrate when a Fingerprint gesture is detected</string>

   <!-- Pip -->
   <string name="app_does_not_support_pip">App does not support picture-in-picture mode.</string>

   <!-- Proximity sensor -->
   <string name="allow_proximity_sensor_title">Allow proximity sensor</string>
   <string name="allow_proximity_sensor_summary">Check the proximity sensor before performing the action</string>

   <!-- DeviceSettings Import -->
   <string name="switch_bar_on">On</string>
   <string name="switch_bar_off">Off</string>

   <!-- Device actions -->
    <string name="actions_title">Actions</string>

    <!-- Camera gesture -->
    <string name="camera_gesture_title">Double-twist</string>
    <string name="camera_gesture_summary">Open camera when using the double twist gesture</string>

    <!-- Chop-chop gesture -->
    <string name="chop_chop_gesture_title">Chop-chop</string>
    <string name="chop_chop_gesture_summary">Toggle flashlight when using the chop-chop gesture</string>

    <!-- Hand wave silencer gesture -->
    <string name="hand_wave_silencer_title">Wave to silence</string>
    <string name="hand_wave_silencer_summary">Silence incoming calls by waving your hand across the screen</string>

    <!-- Flip to mute gesture -->
    <string name="flip_to_mute_title">Flip for Do Not Disturb</string>
    <string name="flip_to_mute_summary">Place the phone face down to silence notifications and calls</string>

    <!-- Do Not Disturb access -->
    <string name="dnd_access">Please, give Do Not Disturb access to CMActions in order to use this feature.</string>

    <!-- Lift to silence gesture -->
    <string name="lift_to_silence_title">Pick up to stop ringing</string>
    <string name="lift_to_silence_summary">Lift the phone to silence incoming calls. It only works when your phone starts flat</string>

    <!-- Hand wave gesture -->
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>

    <!-- Pick-up gesture -->
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>

    <!-- Pocket gesture -->
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- Proximity wake -->
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>

    <!-- Ambient Display -->
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>

    <!-- Stylus/Note -->
    <string name="note_title">Moto Note</string>
    <string name="moto_note_summary">Open the Moto Note application</string>
    <string name="stylus_title">Stylus settings</string>
    <string name="stylus_settings_summary">Edit what happens when you pull out the stylus</string>
</resources>
