<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015-2016 The CyanogenMod Project
     Copyright (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
        android:key="gestures"
        android:title="@string/device_gestures_title"
        android:summary="@string/device_gestures_summary"
        android:icon="@drawable/ic_settings_gestures">
            <intent
                android:targetPackage="org.lineageos.settings.device"
                android:targetClass="org.lineageos.settings.device.GestureSettingsActivity" />
    </Preference>

    <Preference
        android:key="doze"
        android:title="@string/ambient_display_title"
        android:summary="@string/ambient_display_manage_summary"
        android:icon="@drawable/ic_settings_doze">
            <intent
                android:targetPackage="org.lineageos.settings.device"
                android:targetClass="org.lineageos.settings.device.DozePreferenceActivity" />
    </Preference>

    <Preference
        android:key="note"
        android:title="@string/note_title"
        android:summary="@string/moto_note_summary"
        android:icon="@drawable/ic_settings_note">
        <intent
             android:targetPackage="com.motorola.stylus"
             android:targetClass="com.motorola.stylus.manager.NoteManagerActivity" />
    </Preference>

    <Preference
        android:key="stylus"
        android:title="@string/stylus_title"
        android:summary="@string/stylus_settings_summary"
        android:icon="@drawable/ic_settings_stylus">
        <intent
             android:targetPackage="com.motorola.stylus"
             android:targetClass="com.motorola.stylus.settings.activity.SettingsActivity" />
    </Preference>

</PreferenceScreen>
